✨新增：空聊天屏幕可补全玩家名称 (emptyChatScreenCanCompletePlayerName)规则 ✨新增：ScalableLux兼容 (scalableLuxCompatible)规则 ✨新增：光照队列堵塞可加载光照计算完成区块 (lightQueueBlockedCanLoadLightedChunk)规则